# decaf

./: .gitignore  pyproject.toml
src/: .gitignore  conda_info.json  hydramarker_frame_log.csv  xray_marker_selection_debug_uv.npz
src/overlay/calib/: calib_camera_to_pointer.py  calib_camera_to_xray.py  calib_xray_to_pointer.py
src/overlay/debug/: debug_cam2X.py  debug_cam_kosy.py  debug_depth_comp.py  debug_grid_alignment.py  debug_ippe_candidates.py  debug_plane_3d.py  debug_pointer_tip.py  debug_pose_axes.py  debug_pose_cam_xray.py  debug_pose_ippe_drift.py  debug_pose_ippe_handeye.py  debug_rgb_correspondences.py  debug_xray_correspondences.py  debug_xray_flipping.py  debug_xray_image_flipping.py  debug_xray_image_flipping_hom.py
src/overlay/gui/pages/: page_plane_fitting.py  page_pointer_tool_depth.py
src/overlay/tests/: test_cam2x_handeye.py  test_drift_pose.py  test_overlay_image.py  test_pointer_tool_depth.py  test_pose_cam2X_ippe.py  test_pose_estimation.py
src/overlay/tracking/: pose_solvers.py
src/overlay/tracking/hydramarker/: field.py  generate_planar_marker.py  identity_store.py  map_pose_tracker.py  tracker.py  tracker_consistency.py
src/tracking/: pose_filters.py  pose_solvers.py
src/tracking/hydramarker/: config.py  generate_planar_marker.py  identity_store.py  map_pose_tracker.py  tracker.py  tracker_consistency.py  tracker_decode_helpers.py  tracker_decode_pipeline.py  tracker_dense_refine.py  tracker_factories.py  tracker_fallbacks.py  tracker_fast_path.py  tracker_geometry.py  tracker_logger.py  tracker_persistence.py  tracker_pose_estimation.py  tracker_pose_propagation.py  tracker_projection.py  tracker_types.py  tracker_v1.py
src/tracking/hydramarker/cpp/: CMakeLists.txt  bindings.cpp
src/tracking/hydramarker/cpp/include/: checkerboard_detector.hpp  checkerboard_types.hpp  corner_detection.hpp  corner_refinement.hpp  dot_detector.hpp  lattice_model.hpp  lk_tracker.hpp  marker_geometry.hpp  patch_extractor.hpp  tracking_validator.hpp
src/tracking/hydramarker/cpp/src/: checkerboard_detector.cpp  corner_detection.cpp  corner_refinement.cpp  correspondence_builder.cpp  dot_detector.cpp  grid_builder.cpp  lattice_model.cpp  lk_tracker.cpp  marker_field.cpp  marker_geometry.cpp  tracking_validator.cpp
(+113 files in other folders)
