[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "decaf"
version = "0.1.0"
description = "DeCAF RGB-Xray overlay and tracking framework"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
